# faker-locality

./: pyproject.toml
data/raw/: Exonyms.xlsx  ~$Exonyms.xlsx
src/faker_locality/: provider.py  sampler.py  store.py
src/faker_locality/data/processed/: exonyms.parquet  exonyms_city.parquet  exonyms_country.parquet  exonyms_state.parquet  worldcities.parquet
src/faker_locality/scripts/: build_data.py
tests/: test_provider.py  test_sampler.py  test_store.py
