[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faker-locality"
version = "0.1.0"
description = "Real city/province/country generator + exonyms, compatible with Faker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["faker"]

[tool.hatch.build.targets.wheel]
packages = ["src/faker_locality"]

[tool.hatch.build]
include = [
  "src/faker_locality/**",
  "data/processed/**"
]
